Add support for sidebar, add support for headers and anchors, update build script, add various metalsmith plugins.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-util": "*",
     "metalsmith-drafts": "*",
     "metalsmith-markdown": "*",
+    "metalsmith-headings": "*",
     "metalsmith-templates": "*",
     "swig": "*",
     "metalsmith": "*",
