retrieving content from previous patform

--- a/source/en/sidebar.yaml
+++ b/source/en/sidebar.yaml
@@ -1,3 +1,6 @@
 ---
-- {link: /en/Open-Data-Essentials, name: Open Data Essentials}
-- {link: /en/Demand-and-Engagement, name: Demand and Engagement}
+- {link: /en/knowledge-repository, name: Open Data Essentials}
+- {link: /en/it-solutions, name: Technology Options}
+- {link: /en/demand-for-od-engagement-tools, name: Demand and Engagement}
+- {link: /en/supply-of-data, name: Supply and Quality of Data}
+- {link: /en/readiness-assessment-tool, name: Readiness Assessment Tool}
