Trying numbered navigation items

--- a/source/en/sidebar.yaml
+++ b/source/en/sidebar.yaml
@@ -1,6 +1,6 @@
 ---
-- {link: /en/knowledge-repository, name: Open Data Essentials}
-- {link: /en/it-solutions, name: Technology Options}
-- {link: /en/demand-for-od-engagement-tools, name: Demand and Engagement}
-- {link: /en/supply-of-data, name: Supply and Quality of Data}
-- {link: /en/readiness-assessment-tool, name: Readiness Assessment Tool}
+- {link: /en/knowledge-repository, name: 1. Open Data Essentials}
+- {link: /en/it-solutions, name: 2. Technology Options}
+- {link: /en/demand-for-od-engagement-tools, name: 3. Demand and Engagement}
+- {link: /en/supply-of-data, name: 4. Supply and Quality of Data}
+- {link: /en/readiness-assessment-tool, name: 5. Readiness Assessment Tool}
