Add auto generation of interior page links from headers; reorganize technical assistance

--- a/_config.yml
+++ b/_config.yml
@@ -57,4 +57,4 @@ lang:
       - {hdr: h3, link: /en/demand.html, title: Demand and Engagement }
       - {hdr: h3, link: /en/supply.html, title: Supply and Quality of Data }
       - {hdr: h3, link: /en/odra.html, title: Readiness Assessment Tool }
-      - {hdr: h3, link: /en/technical-assistance.html, title: Technical Assistance }
+      - {hdr: h3, link: /en/technical-assistance.html, title: Technical Assistance and Funding }
